# d4_Brage_Gabriel

./: .gitignore  Readme.md  github-ci.yml  pyproject.toml  run_simulation.py  startup.py  task.md  tree.text.txt  tree.txt
.github/workflows/: ci.yml
Examples/: jupiter.ipynb  run_simulation.py
Hallo/: testfile.py
exsample/: run_simulation.py
src/student_sim/: Endpoint.py  Graf.py  Sim_Manager.py  Startpoint.py  Student.py  World.py  sim_factory.py  utils.py
test/: test_Endpoint.py  test_Sim_Manager.py  test_Startpoint.py  test_Student.py  test_World.py  test_graf.py
testing/: test_Endpoint.py  test_Sim_Manager.py  test_Startpoint.py  test_Student.py
tests/: test_Student.py
