# This file is based on https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "student_sim"
version = "0.0.1"
authors = [
  { name="Gabriel Roer", email="gabriel.roer@nmbu.no" },
  { name="Brage Bestvold", email="brage.bromset.bestvold@nmbu.no"}]

description = "A simulation of a drunk girl walking home from Aud-Max"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = ["matplotlib>=3.10.7",
                "numpy>=2.3.3",
                "seaborn>=0.13.2",
                "pytest",
                "pytest-cov",
                "tox"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Board Games"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitlab.com/heplesser/chutes"
Issues = "https://gitlab.com/heplesser/chutes/-/issues"

[tool.setuptools]
script-files = ["Examples/jupiter.ipynb",
                "test/test_Endpoint.py",
                "test/test_graf.py",
                "test/test_Sim_Manager.py",
                "test/test_Startpoint.py",
                "test/test_Student.py",
                "test/test_World.py"]

[tool.tox]
requires = ["tox>=4.32"]
env_list = ["format", "3.14"]

[tool.tox.env_run_base]
deps = ["pytest", "pytest-cov"]
description = "Run test under {base_python}"
commands = [["pytest", "--cov", "student_sim"]]

[tool.tox.env.format]
deps = ["flake8"]
description = "Check code style using flake8"
skip_install = false
commands = [["flake8", "--max-line-length", "120", "src", "test", "Examples"]]
